src/Base/main/default/objects/Product_Issue__c/Product_Issue__c.object-meta.xml
<CustomObject>
    <description>Product Issues to be handled by the Materials Management team.
Includes Description/Data Adjustment, Price Updates, Inventory Adjustments, Inactive Parts, No Longer Available Parts, and other part issues.</description>
    <label>Product Issue</label>
    <nameField>
        <displayFormat>PRODUCT-ISSUES-{0000}</displayFormat>
        <label>Product Issues Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>