src/Base/main/default/objects/Product_Issue__c/fields/Being_Handled_By_Purchasing__c.field-meta.xml
<CustomField>
    <fullName>Being_Handled_By_Purchasing__c</fullName>
    <formula>Owner:User.UserRole.Name = &quot;Purchasing&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Being Handled By Purchasing</label>
    <type>Checkbox</type>
</CustomField>