src/Base/main/default/objects/Product_Issue__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Categories for Product Issues</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Description / Data Adjustment</fullName>
            </value>
            <value>
                <fullName>Inactive or NLA</fullName>
            </value>
            <value>
                <fullName>Inventory Adjustment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>