src/Base/main/default/objects/Product_Issue__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that completed the Product Issue</description>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>