src/Base/main/default/objects/Product_Issue__c/fields/Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Completed_On__c</fullName>
    <description>The Date the Product Issue was Completed On.</description>
    <label>Completed On</label>
    <type>Date</type>
</CustomField>