src/Base/main/default/objects/Product_Issue__c/fields/Department_GLV_2__c.field-meta.xml
<CustomField>
    <fullName>Department_GLV_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Department the issue was submitted by.</description>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Product Issues (Department)</relationshipLabel>
    <relationshipName>Product_Issues_Department</relationshipName>
    <type>Lookup</type>
</CustomField>