src/Base/main/default/objects/Product_Issue__c/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <formula>Department_GLV_2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Name</label>
    <type>Text</type>
</CustomField>