src/Base/main/default/objects/Product_Issue__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Issue</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>