src/Base/main/default/objects/Product_Issue__c/fields/Location_GLV_1__c.field-meta.xml
<CustomField>
    <fullName>Location_GLV_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Location where the product issue stems from (Accounting Variable GLV1)</description>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Product Issues (Location)</relationshipLabel>
    <relationshipName>Product_Issues_Location</relationshipName>
    <type>Lookup</type>
</CustomField>