src/Base/main/default/objects/Product_Issue__c/fields/Status_Category__c.field-meta.xml
<CustomField>
    <fullName>Status_Category__c</fullName>
    <label>Status Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Issue_Status_Category</valueSetName>
    </valueSet>
</CustomField>