src/Base/main/default/objects/Product_Issue__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject for Product Issue</description>
    <label>Subject</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>