src/Base/main/default/objects/Product_Issue__c/fields/Time_Spent_mSec__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_mSec__c</fullName>
    <description>Time spent on the Product Issue</description>
    <label>Time Spent (mSec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>