src/Base/main/default/objects/Product_Issue__c/listViews/Product_Issues_Product_Issues.listView-meta.xml
<ListView>
    <fullName>Product_Issues_Product_Issues</fullName>
    <filterScope>Queue</filterScope>
    <label>Product Issues</label>
    <queue>Product_Issues</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>